[gd_scene load_steps=28 format=2]

[ext_resource path="res://fonts/3x5.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/map/FusionCard.gd" type="Script" id=2]
[ext_resource path="res://sprites/map/CancelIcon.png" type="Texture" id=3]
[ext_resource path="res://sprites/cards/CardOutline.png" type="Texture" id=4]
[ext_resource path="res://sprites/map/ConfirmIcon.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/WindowTemplate.png" type="Texture" id=6]
[ext_resource path="res://src/cards/Icon.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/icons/Sacrifice.tres" type="Resource" id=9]
[ext_resource path="res://sprites/events/Sacrifice.png" type="Texture" id=10]
[ext_resource path="res://resources/icons/Recipient.tres" type="Resource" id=11]
[ext_resource path="res://sprites/events/Recipient.png" type="Texture" id=12]
[ext_resource path="res://resources/icons/Direction.tres" type="Resource" id=13]
[ext_resource path="res://sprites/events/Direction.png" type="Texture" id=14]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 4.0
margin_right = 4.0
margin_top = 10.0
margin_bottom = 4.0
expand_margin_top = 8.0

[sub_resource type="Shader" id=13]
code = "shader_type canvas_item;

uniform bool inverted = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = mix(COLOR.rgb, abs(COLOR.rgb - vec3(1.0)), float(int(inverted)));
}"

[sub_resource type="ShaderMaterial" id=14]
resource_local_to_scene = true
shader = SubResource( 13 )
shader_param/inverted = false

[sub_resource type="Shader" id=15]
code = "shader_type canvas_item;

uniform bool inverted = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = mix(COLOR.rgb, abs(COLOR.rgb - vec3(1.0)), float(int(inverted)));
}"

[sub_resource type="ShaderMaterial" id=16]
resource_local_to_scene = true
shader = SubResource( 15 )
shader_param/inverted = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 1.0
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 2.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Shader" id=9]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform bool inverted = false;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	COLOR.rgb = mix(COLOR.rgb, abs(COLOR.rgb - vec3(1.0)), float(int(inverted)));
}"

[sub_resource type="ShaderMaterial" id=6]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/inverted = false

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = SubResource( 9 )
shader_param/inverted = false

[sub_resource type="Animation" id=18]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("SelectedCard_01:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FinalCard:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=17]
resource_name = "flash_card"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("FinalCard:visible")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true ]
}

[node name="FusionCard" type="Control" groups=["map_card_listeners"]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -1.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Window" type="Panel" parent="."]
margin_left = 26.0
margin_top = 20.0
margin_right = 150.0
margin_bottom = 74.0
custom_styles/panel = SubResource( 1 )

[node name="Title" type="Label" parent="Window"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -59.0
margin_top = -7.0
margin_right = 58.0
custom_fonts/font = ExtResource( 1 )
text = "Card Fusion"
align = 1
valign = 1
uppercase = true

[node name="Blanks" type="HBoxContainer" parent="Window"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_top = 2.0
margin_right = -13.0
margin_bottom = -2.0
alignment = 1

[node name="BlankCard_01" type="TextureRect" parent="Window/Blanks"]
margin_left = 3.0
margin_right = 38.0
margin_bottom = 50.0
size_flags_horizontal = 6
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Icon" parent="Window/Blanks/BlankCard_01" instance=ExtResource( 8 )]
material = SubResource( 14 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.5
margin_top = -4.0
margin_right = 3.5
margin_bottom = 3.0
texture = ExtResource( 12 )
icon = ExtResource( 11 )

[node name="Icon" parent="Window/Blanks" instance=ExtResource( 8 )]
material = SubResource( 16 )
margin_left = 45.0
margin_top = 21.0
margin_right = 52.0
margin_bottom = 28.0
mouse_filter = 2
size_flags_vertical = 4
texture = ExtResource( 14 )
icon = ExtResource( 13 )

[node name="BlankCard_02" type="TextureRect" parent="Window/Blanks"]
margin_left = 59.0
margin_right = 94.0
margin_bottom = 50.0
size_flags_horizontal = 6
texture = ExtResource( 4 )
stretch_mode = 4

[node name="Icon" parent="Window/Blanks/BlankCard_02" instance=ExtResource( 8 )]
material = SubResource( 14 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -3.5
margin_top = -4.0
margin_right = 3.5
margin_bottom = 3.0
texture = ExtResource( 10 )
icon = ExtResource( 9 )

[node name="Panel" type="Panel" parent="Window"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.0
margin_top = 4.0
margin_right = 58.0
margin_bottom = 52.0
custom_styles/panel = SubResource( 2 )

[node name="Instructions" type="Label" parent="Window"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -1.0
margin_right = 62.0
margin_bottom = 8.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/normal = SubResource( 8 )
text = "Choose cards to fuse below"
align = 1
valign = 1
uppercase = true

[node name="Actions" type="HBoxContainer" parent="Window"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -62.0
margin_top = -1.0
margin_right = 62.0
margin_bottom = 8.0
custom_constants/separation = -1
alignment = 1

[node name="Cancel" type="Button" parent="Window/Actions"]
margin_right = 62.0
margin_bottom = 9.0
rect_min_size = Vector2( 45, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="Window/Actions/Cancel"]
material = SubResource( 6 )
margin_left = 2.0
margin_right = 7.0
margin_bottom = 9.0
texture = ExtResource( 3 )
stretch_mode = 4

[node name="HBox" type="HBoxContainer" parent="Window/Actions/Cancel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -2.0
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="Window/Actions/Cancel/HBox"]
margin_top = 2.0
margin_right = 53.0
margin_bottom = 7.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Cancel"
align = 1
valign = 1
uppercase = true

[node name="Confirm" type="Button" parent="Window/Actions"]
margin_left = 61.0
margin_right = 124.0
margin_bottom = 9.0
rect_min_size = Vector2( 45, 0 )
focus_mode = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 1 )
custom_styles/hover = SubResource( 3 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
enabled_focus_mode = 0

[node name="Icon" type="TextureRect" parent="Window/Actions/Confirm"]
material = SubResource( 7 )
margin_left = 2.0
margin_right = 7.0
margin_bottom = 9.0
texture = ExtResource( 5 )
stretch_mode = 4

[node name="HBox" type="HBoxContainer" parent="Window/Actions/Confirm"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 7.0
margin_right = -2.0
mouse_filter = 2
alignment = 1

[node name="Label" type="Label" parent="Window/Actions/Confirm/HBox"]
margin_top = 2.0
margin_right = 54.0
margin_bottom = 7.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Confirm"
align = 1
valign = 1
uppercase = true

[node name="FinalCard" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -46.5
margin_right = 18.0
margin_bottom = -2.5
mouse_filter = 2

[node name="SelectedCard_02" type="Control" parent="."]
margin_left = 99.0
margin_top = 25.0
margin_right = 134.0
margin_bottom = 69.0
mouse_filter = 2

[node name="SelectedCard_01" type="Control" parent="."]
margin_left = 43.0
margin_top = 25.0
margin_right = 78.0
margin_bottom = 69.0
mouse_filter = 2

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 18 )
anims/flash_card = SubResource( 17 )

[connection signal="mouse_entered" from="Window/Actions/Cancel" to="." method="_on_Cancel_mouse_entered"]
[connection signal="mouse_exited" from="Window/Actions/Cancel" to="." method="_on_Cancel_mouse_exited"]
[connection signal="pressed" from="Window/Actions/Cancel" to="." method="_on_Cancel_pressed"]
[connection signal="mouse_entered" from="Window/Actions/Confirm" to="." method="_on_Confirm_mouse_entered"]
[connection signal="mouse_exited" from="Window/Actions/Confirm" to="." method="_on_Confirm_mouse_exited"]
[connection signal="pressed" from="Window/Actions/Confirm" to="." method="_on_Confirm_pressed"]
